<resources>
    <string name="app_name">KeiTracker</string>
    <string name="location_text">Latitude: %1$.4f Longitude: %2$.4f Timestamp: %3$tT</string>
    <string name="items_selected">%d of %d</string>
    <string name="sended_from">Sended from KeiTracker</string>
    <string name="share_with">Share with</string>
    <string name="track_option_share">Share</string>
    <string name="delete">Delete</string>
    <string name="track_option_edit">Edit</string>
    <string name="track_dialog_edit">Edit track</string>
    <string name="track_dialog_new">New track</string>
    <string name="unnamed_track" translatable="false">Unnamed track</string>
    <string name="start_recording_new_track">Start recording a new track</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="stop">Stop</string>
    <string name="open">Open</string>
    <string name="name">Name</string>
    <string name="enable_gps">You should enable GPS</string>
    <string name="settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="about">About</string>
    <string name="sign_in_for_enable">Sign in for enable this option</string>
    <string name="sign_in_success_message">You successfully signed in</string>
    <string name="sign_out_success_message">You successfully signed out</string>
    <string name="anonymous_tracking_title">Anonymous tracking</string>
    <string name="anonymous_tracking_summary">Show anonymous tracking data on global map</string>
    <string name="location_retrieving_interval_title">Location retrieving interval</string>
    <string name="ten_seconds">10 seconds</string>
    <string name="thirty_seconds">30 seconds</string>
    <string name="one_minute">1 minute</string>
    <string name="five_minutes">5 minutes</string>
    <string name="ten_minutes">10 minutes</string>
    <string name="started">started</string>
    <string name="stopped">stopped</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="altitude">altitude</string>
    <string name="about_text">The application allows you to record GPS tracks and share them with other users.</string>
    <string name="privacy_policy"><a href="https://keitracker.riselab.ru/privacy-policy">Privacy Policy</a></string>
    <string name="terms_and_conditions"><a href="https://keitracker.riselab.ru/terms-and-conditions">Terms and Conditions</a></string>
    <string name="delete_selected_tracks">Delete selected tracks?</string>
</resources>
